modules/gdscript/tests/scripts/analyzer/errors/variable_conflicts_variable_declared_below.gd
func test():
	if true:
		var foo = 1
	var foo = 2
